# upsun_config_validator

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  schema.py  setup.py  test.py  test_configs.py  test_individual.py  validator.py
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: publish.yaml  pypi-publish.yaml  pytest.yaml
platformvalidator/: __main__.py
platformvalidator/schemas/: extensions.py
platformvalidator/utils/: utils.py
platformvalidator/validate/: extensions.py  platformsh.py  services.py  upsun.py  validate.py
tests/: shared.py  test_config_validation.py  test_examples.py  test_upsun_configs.py  test_valid_examples.py  test_validate_invalid_services.py  test_validate_invalid_toplevel_keys.py  test_validate_valid_templates.py
tests/failing_configs/: invalid1.yaml  invalid2.yaml  invalid3.yaml  invalid4.yaml  invalid5.yaml  invalid6.yaml  invalid_disk.yaml  invalid_golang.yaml  invalid_routes_missing_upstream.yaml  invalid_service_disk_string.yaml  invalid_varnish.yaml
tests/passing_configs/: elixir_valid.yaml  golang_valid.yaml  java_valid.yaml  nodejs_complex_valid.yaml  nodejs_valid.yaml  php_valid.yaml  python_pegasus_scriv.yaml  python_valid.yaml  rust_valid.yaml  valid1.yaml  valid2.yaml  valid3.yaml
upsunvalidator/: __init__.py  __main__.py
upsunvalidator/examples/: __init__.py
upsunvalidator/tests/: test_invalid_upsun_configs.py
upsunvalidator/utils/: cli.py  utils.py
upsunvalidator/validate/: errors.py  platformsh.py  services.py  upsun.py
(+53 files in other folders)
