[project]
name = "upsunvalidator"
version = "0.1.0"
description = "Helper library for validating configuration files against PaaS schemas."
requires-python = ">=3.13"
dependencies = [
    "click",
    "pyyaml",
    "jsonschema",
    "pytest"
]

[project.scripts]
uv = "upsunvalidator.__main__:cli"
upsunvalidator = "upsunvalidator.__main__:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "upsunvalidator"
